fixed images not showing in html

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -1,3 +1,24 @@
 body {
-    background-color: #5a295a;
+    background-color: #fff;
+    width: 100%;
+    margin: auto;
+}
+
+.container {
+    background-color: #fee;
+    // background: url('../images/paolo-nicolello-unsplash.jpg');
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: "image"
+                        "info";
+
+    .travel-image {
+        grid-area: image;
+    }
+
+    .travel-information {
+        grid-area: info;
+    }
 }
